--- a/mctoexception/MessageExceptions.tt
+++ b/mctoexception/MessageExceptions.tt
@@ -159,14 +159,15 @@ private:
 		LPTSTR message = nullptr;					// Allocated string from ::FormatMessage
 
 		// Attempt to format the message from the current module resources and provided insertions
-		DWORD cchmessage = ::FormatMessage(FORMAT_MESSAGE_ALLOCATE_BUFFER | FORMAT_MESSAGE_FROM_HMODULE | FORMAT_MESSAGE_ARGUMENT_ARRAY, s_module, 
-			static_cast<DWORD>(messageid), ::GetThreadUILanguage(), reinterpret_cast<LPTSTR>(&message), 0, reinterpret_cast<va_list*>(arguments.data())); 
+		DWORD cchmessage = ::FormatMessage(FORMAT_MESSAGE_MAX_WIDTH_MASK | FORMAT_MESSAGE_ALLOCATE_BUFFER | FORMAT_MESSAGE_FROM_HMODULE | 
+			FORMAT_MESSAGE_ARGUMENT_ARRAY, s_module, static_cast<DWORD>(messageid), ::GetThreadUILanguage(), reinterpret_cast<LPTSTR>(&message), 
+			0, reinterpret_cast<va_list*>(arguments.data())); 
 		if(cchmessage == 0) {
 
 			// The message could not be looked up in the specified module; generate the default message instead
 			if(message) { LocalFree(message); message = nullptr; }
-			cchmessage = ::FormatMessage(FORMAT_MESSAGE_ALLOCATE_BUFFER | FORMAT_MESSAGE_FROM_STRING | FORMAT_MESSAGE_ARGUMENT_ARRAY, 
-				s_defaultformat, 0, 0, reinterpret_cast<LPTSTR>(&message), 0, reinterpret_cast<va_list*>(&messageid));
+			cchmessage = ::FormatMessage(FORMAT_MESSAGE_MAX_WIDTH_MASK | FORMAT_MESSAGE_ALLOCATE_BUFFER | FORMAT_MESSAGE_FROM_STRING | 
+				FORMAT_MESSAGE_ARGUMENT_ARRAY, s_defaultformat, 0, 0, reinterpret_cast<LPTSTR>(&message), 0, reinterpret_cast<va_list*>(&messageid));
 			if(cchmessage == 0) {
 
 				// The default message could not be generated; give up
